# L4

./: .travis.yml  CMakeLists.txt
include/: FTPfiles.h
scripts/: checks.sh  coverage.sh  tests.sh
sources/: FTPfiles.cpp  main.cpp
tests/: test.cpp
